--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@ tr:hover .remove {
     </div>
 
   </div>
-  <script src="index.js"></script>
+  <script src="task.js"></script>
+  <!-- <script src="index.js"></script>
   <script src="search.js"></script>
-  <script src="init.js"></script>
+  <script src="init.js"></script> -->
 </body>
 
 </html>
